trunk/Archive2/66/f0ee5a583bf034/output
main.cpp: In function 'int main()':
main.cpp:22:42: error: no matching function for call to 'std::map<int, std::map<int, int> >::map(<brace-enclosed initializer list>)'
     map<int,map<int,int> > test {1, {1,1}}
                                          ^
In file included from /usr/local/include/c++/5.1.0/map:61:0,
                 from /usr/local/include/boost/regex/v4/regex_workaround.hpp:36,
                 from /usr/local/include/boost/regex/v4/regex.hpp:32,
                 from /usr/local/include/boost/regex.hpp:31,
                 from /usr/local/include/boost/range/adaptor/tokenized.hpp:14,
                 from /usr/local/include/boost/range/adaptors.hpp:27,
                 from main.cpp:2:
/usr/local/include/c++/5.1.0/bits/stl_map.h:270:9: note: candidate: template<class _InputIterator> std::map<_Key, _Tp, _Compare, _Alloc>::map(_InputIterator, _InputIterator, const _Compare&, const allocator_type&)
         map(_InputIterator __first, _InputIterator __last,
         ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:270:9: note:   template argument deduction/substitution failed:
main.cpp:22:42: note:   candidate expects 4 arguments, 2 provided
     map<int,map<int,int> > test {1, {1,1}}
                                          ^
In file included from /usr/local/include/c++/5.1.0/map:61:0,
                 from /usr/local/include/boost/regex/v4/regex_workaround.hpp:36,
                 from /usr/local/include/boost/regex/v4/regex.hpp:32,
                 from /usr/local/include/boost/regex.hpp:31,
                 from /usr/local/include/boost/range/adaptor/tokenized.hpp:14,
                 from /usr/local/include/boost/range/adaptors.hpp:27,
                 from main.cpp:2:
/usr/local/include/c++/5.1.0/bits/stl_map.h:253:9: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(_InputIterator, _InputIterator) [with _InputIterator = int; _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >]
         map(_InputIterator __first, _InputIterator __last)
         ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:253:9: note:   no known conversion for argument 2 from '<brace-enclosed initializer list>' to 'int'
/usr/local/include/c++/5.1.0/bits/stl_map.h:236:9: note: candidate: template<class _InputIterator> std::map<_Key, _Tp, _Compare, _Alloc>::map(_InputIterator, _InputIterator, const allocator_type&)
         map(_InputIterator __first, _InputIterator __last,
         ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:236:9: note:   template argument deduction/substitution failed:
main.cpp:22:42: note:   candidate expects 3 arguments, 2 provided
     map<int,map<int,int> > test {1, {1,1}}
                                          ^
In file included from /usr/local/include/c++/5.1.0/map:61:0,
                 from /usr/local/include/boost/regex/v4/regex_workaround.hpp:36,
                 from /usr/local/include/boost/regex/v4/regex.hpp:32,
                 from /usr/local/include/boost/regex.hpp:31,
                 from /usr/local/include/boost/range/adaptor/tokenized.hpp:14,
                 from /usr/local/include/boost/range/adaptors.hpp:27,
                 from main.cpp:2:
/usr/local/include/c++/5.1.0/bits/stl_map.h:230:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(std::initializer_list<std::pair<const _Key, _Tp> >, const allocator_type&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(initializer_list<value_type> __l, const allocator_type& __a)
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:230:7: note:   no known conversion for argument 1 from 'int' to 'std::initializer_list<std::pair<const int, std::map<int, int> > >'
/usr/local/include/c++/5.1.0/bits/stl_map.h:224:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(std::map<_Key, _Tp, _Compare, _Alloc>&&, const allocator_type&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(map&& __m, const allocator_type& __a)
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:224:7: note:   no known conversion for argument 1 from 'int' to 'std::map<int, std::map<int, int> >&&'
/usr/local/include/c++/5.1.0/bits/stl_map.h:220:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(const std::map<_Key, _Tp, _Compare, _Alloc>&, const allocator_type&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(const map& __m, const allocator_type& __a)
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:220:7: note:   no known conversion for argument 1 from 'int' to 'const std::map<int, std::map<int, int> >&'
/usr/local/include/c++/5.1.0/bits/stl_map.h:216:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(const allocator_type&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(const allocator_type& __a)
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:216:7: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/5.1.0/bits/stl_map.h:208:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(std::initializer_list<std::pair<const _Key, _Tp> >, const _Compare&, const allocator_type&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(initializer_list<value_type> __l,
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:208:7: note:   no known conversion for argument 1 from 'int' to 'std::initializer_list<std::pair<const int, std::map<int, int> > >'
/usr/local/include/c++/5.1.0/bits/stl_map.h:193:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(std::map<_Key, _Tp, _Compare, _Alloc>&&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(map&& __x)
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:193:7: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/5.1.0/bits/stl_map.h:182:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(const std::map<_Key, _Tp, _Compare, _Alloc>&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(const map& __x)
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:182:7: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/5.1.0/bits/stl_map.h:171:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map(const _Compare&, const allocator_type&) [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >; std::map<_Key, _Tp, _Compare, _Alloc>::allocator_type = std::allocator<std::pair<const int, std::map<int, int> > >]
       map(const _Compare& __comp,
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:171:7: note:   no known conversion for argument 1 from 'int' to 'const std::less<int>&'
/usr/local/include/c++/5.1.0/bits/stl_map.h:162:7: note: candidate: std::map<_Key, _Tp, _Compare, _Alloc>::map() [with _Key = int; _Tp = std::map<int, int>; _Compare = std::less<int>; _Alloc = std::allocator<std::pair<const int, std::map<int, int> > >]
       map()
       ^
/usr/local/include/c++/5.1.0/bits/stl_map.h:162:7: note:   candidate expects 0 arguments, 2 provided
main.cpp:23:1: error: expected ',' or ';' before '}' token
 }
 ^
